--- a/css/normalize.css
+++ b/css/normalize.css
@@ -21,11 +21,26 @@ html {
 /**
  * Remove the margin in all browsers (opinionated).
  */
-
-body {
-  margin: 0;
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
 }
-
 /**
  * Add the correct display in IE 9-.
  */
@@ -256,6 +271,7 @@ textarea {
 button,
 input { /* 1 */
   overflow: visible;
+  border: 0 none;
 }
 
 /**
@@ -444,4 +460,11 @@ template {
 
 [hidden] {
   display: none;
+}
+
+ul, li { 
+  list-style: none;
+}
+a {
+  text-decoration:none
 }
