--- a/sass/modules/header.scss
+++ b/sass/modules/header.scss
@@ -10,7 +10,7 @@
         @include t-rotate(95deg);
         position: absolute;
         left: 10px; 
-        top: 15px;  
+        top: 18px;  
         font-size: 30px;                                                                                         
     }
     .search-input{
@@ -55,16 +55,35 @@
         width: 54px;
     }
 }
-.nav{
+.nav-list{
     overflow: hidden;
     font-size: 16px;
     line-height: 16px;
+    margin: 20px 0 10px;
     li{
         float: left;
-        padding: 0 20px;
-        border-right: 1px solid #dcdbdb;
         a{
+            margin: 10px 8px 0;
             color: $black;
+            display: inline-block;
+            padding: 6px 12px;
+            
+            &.current{
+                color: $byellow;
+            }
+            &:hover{
+                background: $byellow;
+                color: #fff;
+                border-radius: 2px;
+            }
+          
+        }
+        .line{
+            width: 2px;
+            height: 15px;
+            background-color: #dcdbdb;
+            display: inline-block;
+            vertical-align: middle;
         }
     }
 }
