--- a/sass/pages/supplier.scss
+++ b/sass/pages/supplier.scss
@@ -1,7 +1,6 @@
 @import 'normalize.css';
 @import '../modules/common';
-@import '../modules/top';
-@import '../modules/header';
+@import '../modules/supplier/header';
 @import '../modules/indexList';
 @import '../modules/bottom';
 .all-goods{
