--- a/sass/pages/supplier.scss
+++ b/sass/pages/supplier.scss
@@ -1,6 +1,7 @@
 @import 'normalize.css';
 @import '../modules/common';
 @import '../modules/supplier/header';
+@import '../modules/supplier/shopNav';
 @import '../modules/indexList';
 @import '../modules/bottom';
 .all-goods{
