供应商详情页

--- a/css/index.css
+++ b/css/index.css
@@ -74,6 +74,11 @@ body {
   vertical-align: middle;
   font-size: 16px; }
 
+.title-m {
+  font-size: 16px;
+  margin: 8px 0 15px 30px;
+  color: #666; }
+
 .top-left {
   font-size: 13px;
   color: #fd6f1f;
@@ -239,13 +244,13 @@ body {
       color: #ff6e1f;
       font-size: 14px; }
   .shop-info .round-rect {
-    margin-top: 18px;
     border-radius: 25px;
-    line-height: 34px;
-    height: 34px;
+    line-height: 32px;
+    height: 32px;
     border: 1px solid #ff6e1f;
     color: #ff6e1f;
-    padding: 0 25px; }
+    padding: 0 25px;
+    margin-top: 18px; }
 
 .footer-main {
   padding: 25px 45px 0;
