--- a/css/supplierDetail.css
+++ b/css/supplierDetail.css
@@ -73,6 +73,11 @@ body {
   vertical-align: middle;
   font-size: 16px; }
 
+.title-m {
+  font-size: 16px;
+  margin: 8px 0 15px 30px;
+  color: #666; }
+
 .shop-topbar {
   position: absolute;
   top: 0;
@@ -82,7 +87,8 @@ body {
   .shop-topbar .topbar-item {
     float: left;
     padding-right: 40px;
-    color: #fff; }
+    color: #fff;
+    font-size: 16px; }
   .shop-topbar .topbar-logo {
     margin: 8px 115px 8px 0;
     width: 80px;
@@ -90,7 +96,8 @@ body {
 
 .topbar-right {
   float: right;
-  color: #fff; }
+  color: #fff;
+  font-size: 13px; }
   .topbar-right span {
     padding-right: 16px; }
   .topbar-right .logo-out {
@@ -151,16 +158,13 @@ body {
       .relative-info .disprice span.money {
         font-size: 28px; }
   .relative-info .round-rect {
-    margin-top: 18px;
     border-radius: 25px;
-    line-height: 34px;
-    height: 34px;
+    line-height: 36px;
+    height: 36px;
     border: 1px solid #fff;
     color: #fff;
     padding: 0 25px;
     margin-top: 5px;
-    line-height: 36px;
-    height: 36px;
     font-size: 18px;
     border-width: 2px; }
 
@@ -282,13 +286,63 @@ body {
       color: #ff6e1f;
       font-size: 14px; }
   .shop-info .round-rect {
-    margin-top: 18px;
     border-radius: 25px;
-    line-height: 34px;
-    height: 34px;
+    line-height: 32px;
+    height: 32px;
     border: 1px solid #ff6e1f;
     color: #ff6e1f;
-    padding: 0 25px; }
+    padding: 0 25px;
+    margin-top: 18px; }
+
+.goods-lr {
+  width: 906px;
+  background-color: #f3f3f3; }
+  .goods-lr li {
+    clear: left;
+    position: relative;
+    margin-bottom: 10px;
+    background-color: #fff; }
+    .goods-lr li .img, .goods-lr li .info {
+      float: left; }
+    .goods-lr li .info {
+      margin-left: 30px;
+      width: 618px; }
+    .goods-lr li .price {
+      margin-top: 20px; }
+      .goods-lr li .price .price-n {
+        color: #ea0b0b;
+        font-weight: bold; }
+    .goods-lr li .name {
+      padding: 10px 0 8px;
+      line-height: 30px;
+      font-size: 13px; }
+
+.corner-action {
+  position: absolute;
+  top: 10px;
+  right: 10px; }
+  .corner-action .icon-remove {
+    color: #fff;
+    border-radius: 4px;
+    background-color: #ffae21; }
+  .corner-action span {
+    display: block;
+    margin-top: 8px;
+    color: .corner-action span cgray;
+    font-size: 12px; }
+
+.shopping-car {
+  position: absolute;
+  bottom: 54px;
+  right: 54px;
+  border-radius: 25px;
+  line-height: 30px;
+  height: 30px;
+  border: 1px solid #ff7521;
+  color: #ff7521;
+  padding: 0 25px;
+  color: #fff;
+  background-color: #ff7521; }
 
 .footer-main {
   padding: 25px 45px 0;
@@ -327,10 +381,3 @@ body {
   padding-bottom: 35px;
   color: #999;
   font-size: 13px; }
-
-.all-goods li {
-  clear: left; }
-  .all-goods li .img, .all-goods li .info {
-    float: left; }
-  .all-goods li .info {
-    margin-left: 45px; }
