--- a/sass/modules/common.scss
+++ b/sass/modules/common.scss
@@ -98,11 +98,10 @@ body{
 	-moz-transform: rotate($deg); 	/* Firefox */
 	-webkit-transform: rotate($deg); /* Safari 和 Chrome */
 }
-@mixin round-rect($radius: 25px, $color: $byellow){
-	margin-top: 18px;
+@mixin round-rect($radius: 25px, $height: 32px, $color: $byellow){
 	border-radius: $radius;
-	line-height: 34px;
-	height: 34px;
+	line-height: $height;
+	height: $height;
 	border: 1px solid $color;
 	color: $color;
 	padding: 0 25px;
@@ -110,4 +109,9 @@ body{
 .icon-arrow-right{
 	vertical-align: middle;
 	font-size: 16px;
+}
+.title-m{
+	font-size: $font-size-m;
+	margin: 8px 0 15px 30px;
+	color: $cgray;
 }
