--- a/sass/modules/indexList.scss
+++ b/sass/modules/indexList.scss
@@ -33,6 +33,7 @@
         .price{
             padding: 22px 0 0;
             color: $red01;
+            font-size: $font-size-m;
         }
         .name{
             display: block;
