--- a/sass/pages/supplierDetail.scss
+++ b/sass/pages/supplierDetail.scss
@@ -5,4 +5,5 @@
 @import '../modules/indexList';
 @import '../modules/supplierDetail/list';
 @import '../modules/supplierDetail/shopNews';
+@import '../modules/supplierDetail/shopMenu';
 @import '../modules/bottom';
