--- a/css/supplierDetail.css
+++ b/css/supplierDetail.css
@@ -78,6 +78,9 @@ body {
   margin: 8px 0 15px 30px;
   color: #666; }
 
+.w-906 {
+  width: 906px; }
+
 .shop-topbar {
   position: absolute;
   top: 0;
@@ -192,7 +195,7 @@ body {
     .shopnav-left .shopnav-tab.current:after {
       bottom: 0;
       width: 100%;
-      height: 4px;
+      height: 3px;
       background: #ff6e1f; }
   .shopnav-left .shop-icons-list {
     float: right;
@@ -258,7 +261,8 @@ body {
       padding-left: 6px; }
     .list li .price {
       padding: 22px 0 0;
-      color: #ea0b0b; }
+      color: #ea0b0b;
+      font-size: 16px; }
     .list li .name {
       display: block;
       padding: 8px 0;
@@ -295,18 +299,18 @@ body {
     margin-top: 18px; }
 
 .goods-lr {
-  width: 906px;
   background-color: #f3f3f3; }
   .goods-lr li {
     clear: left;
     position: relative;
     margin-bottom: 10px;
-    background-color: #fff; }
+    background-color: #fff;
+    padding: 10px 54px 10px 20px; }
     .goods-lr li .img, .goods-lr li .info {
       float: left; }
     .goods-lr li .info {
       margin-left: 30px;
-      width: 618px; }
+      width: 596px; }
     .goods-lr li .price {
       margin-top: 20px; }
       .goods-lr li .price .price-n {
@@ -321,7 +325,7 @@ body {
   position: absolute;
   top: 10px;
   right: 10px; }
-  .corner-action .icon-remove {
+  .corner-action .icon-five-star {
     color: #fff;
     border-radius: 4px;
     background-color: #ffae21; }
@@ -343,6 +347,78 @@ body {
   padding: 0 25px;
   color: #fff;
   background-color: #ff7521; }
+
+.detail-lists {
+  position: relative; }
+
+.good-list {
+  width: 100%; }
+
+.goods-list-recommend {
+  background: #f3f3f3;
+  margin-left: 0; }
+  .goods-list-recommend li {
+    position: relative;
+    margin-right: 10px;
+    background-color: #fff;
+    padding: 20px 46px 18px;
+    margin-bottom: 8px; }
+    .goods-list-recommend li .corner-action {
+      right: 20px; }
+
+.shop-news-public {
+  position: absolute;
+  top: 26px;
+  right: 0;
+  width: 294px; }
+  .shop-news-public .shop-news {
+    height: 48px;
+    line-height: 48px;
+    background-color: #ff6e1f;
+    text-align: center;
+    color: #fff;
+    font-size: 18px; }
+  .shop-news-public .news-list {
+    padding: 5px 10px 0;
+    background-color: #fff; }
+    .shop-news-public .news-list .item {
+      position: relative;
+      border-bottom: 1px dashed #e8e8e8; }
+      .shop-news-public .news-list .item p {
+        color: #3c3c3c;
+        margin-top: 10px;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis; }
+      .shop-news-public .news-list .item span, .shop-news-public .news-list .item .look-more {
+        display: inline-block;
+        color: #999;
+        font-size: 12px;
+        margin-bottom: 8px; }
+      .shop-news-public .news-list .item .look-more {
+        position: absolute;
+        right: 8px;
+        bottom: 0; }
+
+.shop-goods-menu {
+  padding: 30px 15px;
+  background-color: #fff;
+  border: 1px solid #eee;
+  z-index: 101;
+  margin-bottom: 20px; }
+  .shop-goods-menu a {
+    display: inline-block;
+    margin: 2px 5px;
+    padding: 3px 10px;
+    width: 14%;
+    color: #101010;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    vertical-align: top;
+    font-size: 16px; }
+    .shop-goods-menu a:hover {
+      color: #ff6e1f; }
 
 .footer-main {
   padding: 25px 45px 0;
