--- a/sass/modules/supplierDetail/list.scss
+++ b/sass/modules/supplierDetail/list.scss
@@ -1,17 +1,17 @@
 .goods-lr{
-    width: 906px;
     background-color: $bgray;
     li{
         clear: left;
         position: relative;
         margin-bottom: 10px;
         background-color: #fff;
+        padding: 10px 54px 10px 20px;
         .img, .info{
             float: left;
         }
       .info{
           margin-left: 30px;
-          width: 618px;
+          width: 596px;
       }
       .price{
           margin-top: 20px;
@@ -31,7 +31,7 @@
     position: absolute;
     top: 10px;
     right: 10px;
-    .icon-remove{
+    .icon-five-star{
         color: #fff;
         border-radius: 4px;
         background-color: #ffae21;
@@ -50,4 +50,24 @@
     @include round-rect(25px, 30px,#ff7521);
     color: #fff;
     background-color: #ff7521;
+}
+.detail-lists{
+    position: relative;
+}
+.good-list{
+    width: 100%;
+}
+.goods-list-recommend{
+    background: $bgray;
+    margin-left: 0;
+    li{
+        position: relative;
+        margin-right: 10px;
+        background-color: #fff;
+        padding: 20px 46px 18px;
+        margin-bottom: 8px;
+        .corner-action{
+            right: 20px;
+        }
+    }
 }
