--- a/css/supplierDetail.css
+++ b/css/supplierDetail.css
@@ -2,8 +2,8 @@
 @font-face {
   font-family: 'iconfont';
   /* project id 156314 */
-  src: url("http://at.alicdn.com/t/font_avj581f41wuvunmi.eot");
-  src: url("http://at.alicdn.com/t/font_avj581f41wuvunmi.eot?#iefix") format("embedded-opentype"), url("http://at.alicdn.com/t/font_avj581f41wuvunmi.woff") format("woff"), url("http://at.alicdn.com/t/font_avj581f41wuvunmi.ttf") format("truetype"), url("http://at.alicdn.com/t/font_avj581f41wuvunmi.svg#iconfont") format("svg"); }
+  src: url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.eot");
+  src: url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.eot?#iefix") format("embedded-opentype"), url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.woff") format("woff"), url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.ttf") format("truetype"), url("http://at.alicdn.com/t/font_vfftwxdfak1kbj4i.svg#iconfont") format("svg"); }
 
 .iconfont {
   font-family: "iconfont" !important;
@@ -324,14 +324,13 @@ body {
 .corner-action {
   position: absolute;
   top: 10px;
-  right: 10px; }
+  right: 10px;
+  text-align: center; }
   .corner-action .icon-five-star {
-    color: #fff;
-    border-radius: 4px;
-    background-color: #ffae21; }
+    color: #ffae21;
+    font-size: 36px; }
   .corner-action span {
     display: block;
-    margin-top: 8px;
     color: .corner-action span cgray;
     font-size: 12px; }
 
