--- a/sass/modules/supplierDetail/list.scss
+++ b/sass/modules/supplierDetail/list.scss
@@ -31,14 +31,13 @@
     position: absolute;
     top: 10px;
     right: 10px;
+    text-align: center;
     .icon-five-star{
-        color: #fff;
-        border-radius: 4px;
-        background-color: #ffae21;
+        color: #ffae21;
+        font-size: 36px;
     }
     span{
         display: block;
-        margin-top: 8px;
         color: &cgray;
         font-size: 12px;
     }
