--- a/css/index.css
+++ b/css/index.css
@@ -82,6 +82,9 @@ body {
 .w-906 {
   width: 906px; }
 
+.hide {
+  display: none !important; }
+
 .top-left {
   font-size: 13px;
   color: #fd6f1f;
@@ -216,11 +219,16 @@ body {
         width: 100%;
         height: 100%; }
     .list li .info {
-      padding-left: 6px; }
+      padding-left: 6px;
+      text-align: left; }
     .list li .price {
       padding: 22px 0 0;
       color: #ea0b0b;
       font-size: 16px; }
+      .list li .price i {
+        font-size: 12px;
+        margin-right: 3px;
+        display: inline-block; }
     .list li .name {
       display: block;
       padding: 8px 0;
@@ -252,8 +260,9 @@ body {
     line-height: 32px;
     height: 32px;
     border: 1px solid #ff6e1f;
-    color: #ff6e1f;
+    color: #fff;
     padding: 0 25px;
+    color: #ff6e1f;
     margin-top: 18px; }
 
 .footer-main {
