--- a/css/supplierDetail.css
+++ b/css/supplierDetail.css
@@ -81,6 +81,9 @@ body {
 .w-906 {
   width: 906px; }
 
+.hide {
+  display: none !important; }
+
 .shop-topbar {
   position: absolute;
   top: 0;
@@ -258,11 +261,16 @@ body {
         width: 100%;
         height: 100%; }
     .list li .info {
-      padding-left: 6px; }
+      padding-left: 6px;
+      text-align: left; }
     .list li .price {
       padding: 22px 0 0;
       color: #ea0b0b;
       font-size: 16px; }
+      .list li .price i {
+        font-size: 12px;
+        margin-right: 3px;
+        display: inline-block; }
     .list li .name {
       display: block;
       padding: 8px 0;
@@ -294,8 +302,9 @@ body {
     line-height: 32px;
     height: 32px;
     border: 1px solid #ff6e1f;
-    color: #ff6e1f;
+    color: #fff;
     padding: 0 25px;
+    color: #ff6e1f;
     margin-top: 18px; }
 
 .goods-lr {
@@ -315,43 +324,44 @@ body {
       margin-top: 20px; }
       .goods-lr li .price .price-n {
         color: #ea0b0b;
-        font-weight: bold; }
+        font-weight: 700; }
     .goods-lr li .name {
       padding: 10px 0 8px;
       line-height: 30px;
       font-size: 13px; }
+    .goods-lr li .shopping-car {
+      position: absolute;
+      bottom: 54px;
+      right: 54px; }
 
 .corner-action {
   position: absolute;
-  top: 10px;
-  right: 10px;
+  top: 8px;
+  right: 2px;
   text-align: center; }
   .corner-action .icon-five-star {
     color: #ffae21;
-    font-size: 36px; }
+    font-size: 46px; }
   .corner-action span {
     display: block;
-    color: .corner-action span cgray;
-    font-size: 12px; }
-
-.shopping-car {
-  position: absolute;
-  bottom: 54px;
-  right: 54px;
-  border-radius: 25px;
-  line-height: 30px;
-  height: 30px;
-  border: 1px solid #ff7521;
-  color: #ff7521;
-  padding: 0 25px;
-  color: #fff;
-  background-color: #ff7521; }
+    color: #666;
+    font-size: 12px;
+    margin-top: -5px; }
 
 .detail-lists {
   position: relative; }
 
 .good-list {
   width: 100%; }
+  .good-list .round-rect {
+    border-radius: 25px;
+    line-height: 30px;
+    height: 30px;
+    border: 1px solid #ff7521;
+    color: #fff;
+    padding: 0 25px;
+    background-color: #ff7521;
+    display: inline-block; }
 
 .goods-list-recommend {
   background: #f3f3f3;
@@ -360,10 +370,52 @@ body {
     position: relative;
     margin-right: 10px;
     background-color: #fff;
-    padding: 20px 46px 18px;
-    margin-bottom: 8px; }
+    padding: 10px 46px 18px;
+    margin-bottom: 8px;
+    text-align: center; }
     .goods-list-recommend li .corner-action {
-      right: 20px; }
+      right: 14px; }
+    .goods-list-recommend li .shopping-car {
+      margin-top: 22px; }
+    .goods-list-recommend li .name {
+      padding: 8px 0 4px; }
+
+.shop-cartctrl {
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
+  -webkit-transform: translateX(-50%);
+  cursor: pointer;
+  width: 118px;
+  height: 28px;
+  line-height: 28px;
+  border-radius: 20px;
+  text-align: center;
+  border: 1px solid #f1f1f1;
+  margin-top: 22px; }
+  .shop-cartctrl .ctrl {
+    position: absolute;
+    top: 0;
+    display: inline-block;
+    height: 28px;
+    width: 34px;
+    text-align: center;
+    background-color: #f4f4f4; }
+  .shop-cartctrl .minus {
+    left: 0;
+    border-right: 1px solid #f1f1f1;
+    border-radius: 20px 0 0 20px;
+    cursor: pointer; }
+  .shop-cartctrl .plus {
+    right: 0;
+    border-left: 1px solid #f1f1f1;
+    border-radius: 0 20px 20px 0;
+    cursor: pointer; }
+  .shop-cartctrl .quantity {
+    left: 35px;
+    background-color: #fff;
+    width: 46px;
+    height: 26px; }
 
 .shop-news-public {
   position: absolute;
