--- a/sass/modules/supplierDetail/list.scss
+++ b/sass/modules/supplierDetail/list.scss
@@ -38,8 +38,11 @@
     right: 2px;
     text-align: center;
     .icon-five-star{
-        color: #ffae21;
+        color: #ebeeef;
         font-size: 46px;
+    }
+    .icon-collected{
+        color: #ffae21;
     }
     span{
         display: block;
