--- a/sass/pages/supplierDetail.scss
+++ b/sass/pages/supplierDetail.scss
@@ -6,4 +6,5 @@
 @import '../modules/supplierDetail/list';
 @import '../modules/supplierDetail/shopNews';
 @import '../modules/supplierDetail/shopMenu';
+@import '../modules/supplierDetail/shopCart';
 @import '../modules/bottom';
